--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,21 +1,23 @@
 @import './variables';
 @import './expression-graph.scss';
+@import './landing-page.scss';
+@import './header.scss';
+@import './all-graphs.scss';
+@import './footer.scss';
 
 * {
-    border: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 body {
     .app-container {
-      font-family: $font-primary;
+      font-family: $font-secondary;
       width: 100%;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      background-color: #EFF2F4;
+      min-height: 100vh;
+      overflow: hidden;
   
       .visible-block {
         display: block;
@@ -33,6 +35,13 @@ body {
         border: none;
         font-family: $font-primary;
         font-size: 1em;
+      }
+
+      .title {
+        color: #2E3133;
+        font-weight: 800;
+        font-style: italic;
+        font-size: 3em;
       }
     }
   }
