--- a/src/scss/landing-page.scss
+++ b/src/scss/landing-page.scss
@@ -88,14 +88,14 @@
                     .channel-checkbox {
                         display: flex;
                         align-items: center;
-                        span[class^="MuiButtonBase-root-"] {
-                            padding: 0 5px 0 0;
-                        }
-                        svg[class^="MuiSvgIcon-root-"] {
-                            // path {
-                                fill: #EFF2F4 !important;
-                            // }
-                        }
+                        // span[class^="MuiButtonBase-root-"] {
+                        //     padding: 0 5px 0 0;
+                        // }
+                        // svg[class^="MuiSvgIcon-root-"] {
+                        //     // path {
+                        //         fill: #EFF2F4 !important;
+                        //     // }
+                        // }
                         
                     }
     
